--- a/elegance_application/pubspec.yaml
+++ b/elegance_application/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/animations/
     - assets/icons/
     - assets/audio/
+
   fonts:
     - family: Gilroy
       fonts:
@@ -80,7 +81,10 @@ flutter:
         - asset: assets/fonts/Gilroy-Heavy.ttf
         - asset: assets/fonts/Gilroy-Light.ttf
         - asset: assets/fonts/Gilroy-Medium.ttf
-
+    # - family: NotoColorEmoji
+    #   fonts:
+    #     - asset: assets/fonts/NotoColorEmoji.ttf
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
@@ -92,17 +96,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
