--- a/elegance_application/pubspec.yaml
+++ b/elegance_application/pubspec.yaml
@@ -32,12 +32,13 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the CupertinoIcons class0 for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.16
   lottie: ^3.2.0
   google_fonts: ^6.2.1
   path_provider: ^2.0.14
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
@@ -84,7 +85,7 @@ flutter:
     # - family: NotoColorEmoji
     #   fonts:
     #     - asset: assets/fonts/NotoColorEmoji.ttf
-    
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
