--- a/elegance_application/pubspec.yaml
+++ b/elegance_application/pubspec.yaml
@@ -82,9 +82,11 @@ flutter:
         - asset: assets/fonts/Gilroy-Heavy.ttf
         - asset: assets/fonts/Gilroy-Light.ttf
         - asset: assets/fonts/Gilroy-Medium.ttf
-    # - family: NotoColorEmoji
-    #   fonts:
-    #     - asset: assets/fonts/NotoColorEmoji.ttf
+
+        
+    - family: NotoColorEmoji
+      fonts:
+        - asset: assets/fonts/NotoColorEmoji.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
