--- a/elegance_application/pubspec.yaml
+++ b/elegance_application/pubspec.yaml
@@ -64,6 +64,8 @@ dev_dependencies:
 
   build_runner: ^2.4.14
   hive_generator: ^2.0.1
+  test_cov_console: ^0.2.2
+  mocktail: ^1.0.4
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -105,7 +107,7 @@ flutter:
         - asset: assets/fonts/Gilroy-Light.ttf
         - asset: assets/fonts/Gilroy-Medium.ttf
 
-        
+
     # - family: NotoColorEmoji
     #   fonts:
     #     - asset: assets/fonts/NotoColorEmoji.ttf
