--- a/elegance_application/pubspec.yaml
+++ b/elegance_application/pubspec.yaml
@@ -66,6 +66,7 @@ dev_dependencies:
   hive_generator: ^2.0.1
   test_cov_console: ^0.2.2
   mocktail: ^1.0.4
+  bloc_test: ^9.1.7
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
